optimisation des methodes de la classe EmailServiceImpl

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,3 +15,9 @@ EMAIL_PORT: 587
 EMAIL_USERNAME: gobinambale@gmail.com
 EMAIL_PASSWORD: mlxeahthhdqkeyjw
 VERIFY_EMAIL_HOST: http://localhost:${SERVER_PORT}
+
+#Image Resource
+IMAGE_1: /Downloads/images/woman.png
+IMAGE_2: /Downloads/images/icon.png
+DOCUMENT_FILE: /Downloads/images/data.docx
+IMAGE_LOGO: /Downloads/images/logo.png
