--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,4 +46,4 @@ variable:
   img_1: ${IMAGE_1}
   img_2: ${IMAGE_2}
   img_logo: ${IMAGE_LOGO}
-  document_file: ${DOCUMENR_FILE}
+  document_file: ${DOCUMENT_FILE}
