mise a jour des fonctions

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,5 +1,5 @@
 #Server
-ACTIVE_PROFILE: prod
+ACTIVE_PROFILE: test
 SERVER_PORT: 9000
 
 #Email Config
@@ -8,9 +8,3 @@ EMAIL_PORT: 587
 EMAIL_USERNAME: gobinambale@gmail.com
 EMAIL_PASSWORD: mlxeahthhdqkeyjw
 VERIFY_EMAIL_HOST: http://localhost:${SERVER_PORT}
-
-#Image Resource
-IMAGE_1: /Downloads/images/woman.png
-IMAGE_2: /Downloads/images/icon.png
-DOCUMENT_FILE: /Downloads/images/data.docx
-IMAGE_LOGO: /Downloads/images/logo.png
