--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.eda</groupId>
 	<artifactId>sendemail</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.1</version>
 	<name>sendemail</name>
 	<description>Demo project for Spring Boot Send Email</description>
 	<properties>
